Add numerals to all test passwords

--- a/tests/integration/targets/v4.0/tasks/netbox_token.yml
+++ b/tests/integration/targets/v4.0/tasks/netbox_token.yml
@@ -10,7 +10,7 @@
     netbox_token: "0123456789abcdef0123456789abcdef01234567"
     data:
       username: TestUser
-      password: TestPassword
+      password: TestPassword1
     state: present
 
 - name: "TOKEN 1: Necessary info creation"
