--- a/tests/integration/targets/v4.0/tasks/netbox_user.yml
+++ b/tests/integration/targets/v4.0/tasks/netbox_user.yml
@@ -10,7 +10,7 @@
     netbox_token: "0123456789abcdef0123456789abcdef01234567"
     data:
       username: TestUser
-      password: TestPassword
+      password: TestPassword1
     state: present
   register: test_one
 
@@ -48,7 +48,7 @@
     netbox_token: "0123456789abcdef0123456789abcdef01234567"
     data:
       username: TestUser
-      password: TestPassword
+      password: TestPassword3
       email: test@user.com
       first_name: Test
       last_name: User
