--- a/tests/integration/targets/v4.2/tasks/netbox_permission.yml
+++ b/tests/integration/targets/v4.2/tasks/netbox_permission.yml
@@ -123,7 +123,7 @@
     netbox_token: "0123456789abcdef0123456789abcdef01234567"
     data:
       username: TestUser
-      password: TestPassword
+      password: TestPassword6
       permissions:
         - Test Permission 2
     state: present
