--- a/tests/integration/targets/v4.0/tasks/netbox_permission.yml
+++ b/tests/integration/targets/v4.0/tasks/netbox_permission.yml
@@ -115,7 +115,7 @@
   ansible.builtin.assert:
     that:
       - test_five is changed
-      - test_five['user_group']['permissions'] == [1]
+      - test_five['user_group']['permissions'] == [test_one['permission']['id']]
 
 - name: "PERMISSION 6: Add permission to user"
   netbox.netbox.netbox_user:
@@ -133,7 +133,7 @@
   ansible.builtin.assert:
     that:
       - test_six is changed
-      - test_six['user']['permissions'] == [2]
+      - test_six['user']['permissions'] == [test_four['permission']['id']]
 
 - name: "PERMISSION 7: Delete"
   netbox.netbox.netbox_permission:
