--- a/tests/integration/targets/regression-v4.3/tasks/main.yml
+++ b/tests/integration/targets/regression-v4.3/tasks/main.yml
@@ -282,3 +282,20 @@
       ansible.builtin.assert:
         that:
           - test_results.results.0.location.id != test_results.results.1.location.id
+
+- name: "Issue #1413 - Update interface primary MAC by ID"
+  netbox.netbox.netbox_device_interface:
+    netbox_url: http://localhost:32768
+    netbox_token: "0123456789abcdef0123456789abcdef01234567"
+    data:
+      device: test100
+      name: GigabitEthernet2
+      primary_mac_address:
+        id: 3
+    state: present
+  register: test_results
+
+- name: "ASSERT Issue #1413"
+  ansible.builtin.assert:
+    that:
+      - test_results['interface']['primary_mac_address'] == 3
