--- a/tests/integration/targets/v4.3/tasks/netbox_power_outlet.yml
+++ b/tests/integration/targets/v4.3/tasks/netbox_power_outlet.yml
@@ -24,7 +24,6 @@
       - test_one['diff']['before']['state'] == "absent"
       - test_one['diff']['after']['state'] == "present"
       - test_one['power_outlet']['name'] == "Power Outlet"
-      - test_one['power_outlet']['device'] == 10
       - test_one['msg'] == "power_outlet Power Outlet created"
 
 - name: "POWER_OUTLET 2: Create duplicate"
@@ -42,7 +41,7 @@
     that:
       - not test_two['changed']
       - test_two['power_outlet']['name'] == "Power Outlet"
-      - test_two['power_outlet']['device'] == 10
+      - test_two['power_outlet']['device'] == test_one['power_outlet']['device']
       - test_two['msg'] == "power_outlet Power Outlet already exists"
 
 - name: "POWER_OUTLET 3: Update power_outlet with other fields"
@@ -68,7 +67,7 @@
       - test_three['diff']['after']['feed_leg'] == "B"
       - test_three['diff']['after']['description'] == "test description"
       - test_three['power_outlet']['name'] == "Power Outlet"
-      - test_three['power_outlet']['device'] == 10
+      - test_three['power_outlet']['device'] == test_one['power_outlet']['device']
       - test_three['power_outlet']['type'] == "ita-e"
       - test_three['power_outlet']['power_port'] == 1
       - test_three['power_outlet']['feed_leg'] == "B"
@@ -92,7 +91,7 @@
       - test_four['diff']['before']['state'] == "absent"
       - test_four['diff']['after']['state'] == "present"
       - test_four['power_outlet']['name'] == "Power Outlet 2"
-      - test_four['power_outlet']['device'] == 10
+      - test_four['power_outlet']['device'] == test_one['power_outlet']['device']
       - test_four['msg'] == "power_outlet Power Outlet 2 created"
 
 - name: "POWER_OUTLET 5: Delete Power Outlet"
