--- a/tests/integration/targets/v4.1/tasks/netbox_permission.yml
+++ b/tests/integration/targets/v4.1/tasks/netbox_permission.yml
@@ -211,6 +211,4 @@
   ansible.builtin.assert:
     that:
       - not test_nine['changed']
-      # actions seem to be ordered randomly so we cannot test them here
-      - test_nine['permission']['object_types'][0] == 'vpn.tunneltermination'
-      - test_nine['permission']['object_types'][1] == 'wireless.wirelesslan'
+      # actions and object_types seem to be ordered randomly so we cannot test them here
