--- a/tests/integration/targets/v4.0/tasks/main.yml
+++ b/tests/integration/targets/v4.0/tasks/main.yml
@@ -23,6 +23,15 @@
 - name: NETBOX_CONTACT TESTS
   ansible.builtin.include_tasks: netbox_contact.yml
 
+- name: NETBOX_CONTACT_GROUP TESTS
+  ansible.builtin.include_tasks:
+    file: netbox_contact_group.yml
+    apply:
+      tags:
+        - netbox_contact_group
+  tags:
+    - netbox_contact_group
+
 - name: NETBOX_CONTACT_ROLE TESTS
   ansible.builtin.include_tasks: netbox_contact_role.yml
 
